--- a/.env
+++ b/.env
@@ -150,7 +150,7 @@ CACHE_BUSTING_MEDIA_ENABLED=False
 MAX_DOCUMENT_SIZE=2
 CLIENT_RESULTS_LIMIT=5
 API_LIMIT_PER_PAGE=1000
-ALLOWED_DOCUMENT_TYPES=['doc', 'docx', 'gif', 'jpg', 'jpeg', 'ods', 'odt', 'odp', 'pdf', 'png','ppt', 'pptx', 'rar', 'sld', 'tif', 'tiff', 'txt', 'xls', 'xlsx', 'xml', 'zip', 'gz', 'qml']
+ALLOWED_DOCUMENT_TYPES=['csv','doc', 'docx', 'gif', 'jpg', 'jpeg', 'ods', 'odt', 'odp', 'pdf', 'png','ppt', 'pptx', 'rar', 'sld', 'tif', 'tiff', 'txt', 'xls', 'xlsx', 'xml', 'zip', 'gz', 'qml']
 
 # GIS Client
 GEONODE_CLIENT_LAYER_PREVIEW_LIBRARY=mapstore
